# Calculator

./: CMakeLists.txt  Makefile  README.md  SimpleCalculator.cpp  calculator
modules/: basicmath.cpp  basicmath.h  booleanalgebra.cpp  booleanalgebra.h  complexnumbers.cpp  complexnumbers.h  derivatives.cpp  derivatives.h  integrals.cpp  integrals.h  logarithms.cpp  logarithms.h  matrices.cpp  matrices.h  numericalmethods.cpp  numericalmethods.h  trigonometry.cpp  trigonometry.h  vectors.cpp  vectors.h
